Add appearance property

--- a/demo/index.html
+++ b/demo/index.html
@@ -56,11 +56,9 @@
           </div>
         </fieldset>
       </form>
-
     </main>
-
-    <dark-mode-toggle mode="dark" light="Light" dark="Dark"></dark-mode-toggle>
-
+    <dark-mode-toggle appearance="toggle" light="Light" dark="Dark"></dark-mode-toggle>
+    <!-- <dark-mode-toggle appearance="switch" light="Light" dark="Dark"></dark-mode-toggle> -->
   </body>
 </html>
 
