Add event dispatching

--- a/demo/index.html
+++ b/demo/index.html
@@ -57,8 +57,10 @@
         </fieldset>
       </form>
     </main>
-    <dark-mode-toggle appearance="toggle" light="Light" dark="Dark"></dark-mode-toggle>
-    <!-- <dark-mode-toggle appearance="switch" light="Light" dark="Dark"></dark-mode-toggle> -->
+    <dark-mode-toggle id="dmt1"></dark-mode-toggle>
+
+    <dark-mode-toggle id="dmt2" appearance="toggle" legend="Dark Mode" light="off" dark="on"></dark-mode-toggle>
+    <dark-mode-toggle id="dmt3" appearance="switch" legend="Select Theme" light="Light" dark="Dark"></dark-mode-toggle>
   </body>
 </html>
 
