--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="light.css" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
     <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)">
-    <script type="module" src="../src/dark-mode-toggle.mjs"></script>
+    <script type="module" src="../dist/dark-mode-toggle.min.mjs"></script>
   </head>
   <body>
     <main>
