--- a/demo/index.html
+++ b/demo/index.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" href="light.css" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
     <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)">
     <script type="module" src="../src/dark-mode-toggle.mjs"></script>
+    <script type="module" src="dark-mode-toggle-playground.mjs"></script>
   </head>
   <body>
     <main>
       <h1>Hi there!</h1>
 
-      <img src="https://cdn.glitch.com/d3157ced-3c57-4ee7-98ad-b6271d0a39a6%2Fcat-2083492_640.jpg?1551350494400" alt="Sitting cat in front of a tree" width="640" height="390" intrinsicsize="640x390">
+      <img src="cat.jpg" alt="Sitting cat in front of a tree" width="640" height="390" intrinsicsize="640x390">
 
       <p>
         Lorem ipsum dolor sit amet, legere ancillae ne vis. Ne vim laudem accusam consectetuer,
@@ -57,10 +58,12 @@
         </fieldset>
       </form>
     </main>
-    <dark-mode-toggle id="dmt1"></dark-mode-toggle>
-
-    <dark-mode-toggle id="dmt2" appearance="toggle" legend="Dark Mode" light="off" dark="on"></dark-mode-toggle>
-    <dark-mode-toggle id="dmt3" appearance="switch" legend="Select Theme" light="Light" dark="Dark"></dark-mode-toggle>
+    <aside>
+      <dark-mode-toggle></dark-mode-toggle>
+      <dark-mode-toggle style="--dark-mode-toggle-light-icon: url(sun.svg); --dark-mode-toggle-dark-icon: url(moon.svg); --dark-mode-toggle-icon-filter: invert(100%);"></dark-mode-toggle>
+      <dark-mode-toggle legend="Dark Mode" light="off" dark="on"></dark-mode-toggle>
+      <dark-mode-toggle style="--dark-mode-toggle-active-mode-color: var(--accent-color);" legend="Theme" light="Light" dark="Dark" appearance="switch"></dark-mode-toggle>
+    </aside>
   </body>
 </html>
 
