First stab at README and minor CSS changes

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,7 @@
       <dark-mode-toggle></dark-mode-toggle>
       <dark-mode-toggle style="--dark-mode-toggle-light-icon: url(sun.svg); --dark-mode-toggle-dark-icon: url(moon.svg); --dark-mode-toggle-icon-filter: invert(100%);"></dark-mode-toggle>
       <dark-mode-toggle legend="Dark Mode" light="off" dark="on"></dark-mode-toggle>
-      <dark-mode-toggle style="--dark-mode-toggle-active-mode-color: var(--accent-color);" legend="Theme" light="Light" dark="Dark" appearance="switch"></dark-mode-toggle>
+      <dark-mode-toggle legend="Theme" light="Light" dark="Dark" appearance="switch" style="--dark-mode-toggle-active-mode-background-color: var(--accent-color);"></dark-mode-toggle>
     </aside>
   </body>
 </html>
