--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="light.css" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
     <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)">
@@ -59,10 +60,10 @@
       </form>
     </main>
     <aside>
-      <dark-mode-toggle></dark-mode-toggle>
-      <dark-mode-toggle style="--dark-mode-toggle-light-icon: url(sun.svg); --dark-mode-toggle-dark-icon: url(moon.svg); --dark-mode-toggle-icon-filter: invert(100%);"></dark-mode-toggle>
-      <dark-mode-toggle legend="Dark Mode" light="off" dark="on"></dark-mode-toggle>
-      <dark-mode-toggle legend="Theme" light="Light" dark="Dark" appearance="switch" style="--dark-mode-toggle-active-mode-background-color: var(--accent-color);"></dark-mode-toggle>
+      <dark-mode-toggle id="dark-mode-toogle-1"></dark-mode-toggle>
+      <dark-mode-toggle id="dark-mode-toogle-2" style="--dark-mode-toggle-light-icon: url(sun.svg); --dark-mode-toggle-dark-icon: url(moon.svg); --dark-mode-toggle-icon-filter: invert(100%);"></dark-mode-toggle>
+      <dark-mode-toggle id="dark-mode-toogle-3" legend="Dark Mode" light="off" dark="on"></dark-mode-toggle>
+      <dark-mode-toggle id="dark-mode-toogle-4" legend="Theme" light="Light" dark="Dark" appearance="switch" style="--dark-mode-toggle-active-mode-background-color: var(--accent-color);"></dark-mode-toggle>
     </aside>
   </body>
 </html>
