Fix minified CSS and README tweaks

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
     </script>
     <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="light.css" media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)">
-    <link rel="stylesheet" href="common.css">    
+    <link rel="stylesheet" href="common.css">
     <script type="module" src="dark-mode-toggle-playground.mjs"></script>
     <script type="module" src="../src/dark-mode-toggle.mjs"></script>
   </head>
@@ -62,6 +62,10 @@
           </div>
         </fieldset>
       </form>
+      <p>
+        Also see the <a href="/demo/unstyled.html">unstyled variant</a>
+        that shows the out-of-the-box experience.
+      </p>
     </main>
     <aside>
       <dark-mode-toggle id="dark-mode-toggle-1"></dark-mode-toggle>
