Make stylesheet matching more resilient and demo tweaks

--- a/demo/dist.html
+++ b/demo/dist.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="light.css" media="(prefers-color-scheme: no-preference), (prefers-color-scheme: light)">
     <link rel="stylesheet" href="common.css">
     <script type="module" src="dark-mode-toggle-playground.mjs"></script>
-    <script type="module" src="../src/dark-mode-toggle.mjs"></script>
+    <script type="module" src="../dist/dark-mode-toggle.min.mjs"></script>
   </head>
   <body>
     <main>
@@ -65,10 +65,6 @@
       <p>
         Also see the <a href="/demo/unstyled.html">unstyled variant</a>
         that shows the out-of-the-box experience.
-      </p>
-      <p>
-        Run <code>npm run build</code> and see the <a href="/demo/dist.html">built variant</a>
-        that uses the minified version of the script in the <code>dist</code> folder.
       </p>
     </main>
     <aside>
