Correct routes for unstyled and built variants
An absolute URL leads to a 404 because the full route includes /dark-mode-toggle/

--- a/demo/dist.html
+++ b/demo/dist.html
@@ -63,7 +63,7 @@
         </fieldset>
       </form>
       <p>
-        Also see the <a href="/demo/unstyled.html">unstyled variant</a>
+        Also see the <a href="unstyled.html">unstyled variant</a>
         that shows the out-of-the-box experience.
       </p>
     </main>
