--- a/demo/index.html
+++ b/demo/index.html
@@ -63,11 +63,11 @@
         </fieldset>
       </form>
       <p>
-        Also see the <a href="/demo/unstyled.html">unstyled variant</a>
+        Also see the <a href="unstyled.html">unstyled variant</a>
         that shows the out-of-the-box experience.
       </p>
       <p>
-        Run <code>npm run build</code> and see the <a href="/demo/dist.html">built variant</a>
+        Run <code>npm run build</code> and see the <a href="dist.html">built variant</a>
         that uses the minified version of the script in the <code>dist</code> folder.
       </p>
     </main>
