--- a/demo/dist.html
+++ b/demo/dist.html
@@ -47,10 +47,16 @@
             <button type="button">Lorem</button>
           </div>
           <div>
-            <input type="text" value="Lorem ipsum">
+            <label>
+              <input type="text" value="Lorem ipsum">
+              Lorem ipsum
+            </label>
           </div>
           <div>
-            <input type="search" value="Lorem ipsum">
+            <label>
+              <input type="search" value="Lorem ipsum">
+              Lorem ipsum
+            </label>
           </div>
           <div>
             <label><input checked type="checkbox"> Lorem</label>
