--- a/demo/dist.html
+++ b/demo/dist.html
@@ -28,7 +28,7 @@
   <body>
     <main>
       <h1>Hi there!</h1>
-      <img src="cat.jpg" alt="Sitting cat in front of a tree" width="640" height="390" intrinsicsize="640x390">
+      <img src="cat.jpg" alt="Sitting cat in front of a tree" width="640" height="390">
       <p>
         Lorem ipsum dolor sit amet, legere ancillae ne vis. Ne vim laudem accusam consectetuer,
         eu utinam integre abhorreant sea. Quo eius veri ei, nibh invenire democritum vel in,
