Implement dark slider

--- a/demo/index.html
+++ b/demo/index.html
@@ -89,6 +89,9 @@
     <aside>
       <dark-mode-toggle id="dark-mode-toggle-4" legend="Theme Switcher" light="Light" dark="Dark" remember="Remember this" appearance="switch"></dark-mode-toggle>
     </aside>
+    <aside>
+      <dark-mode-toggle id="dark-mode-toggle-5" legend="Dark Slider" remember="Remember this" appearance="slider"></dark-mode-toggle>
+    </aside>
   </body>
 </html>
 
