--- a/demo/unstyled.html
+++ b/demo/unstyled.html
@@ -25,6 +25,8 @@
       <dark-mode-toggle permanent remember="Remember"></dark-mode-toggle>
       <code>&lt;dark-mode-toggle appearance="switch" permanent remember="Remember"&gt;&lt;/dark-mode-toggle&gt;</code>
       <dark-mode-toggle appearance=switch permanent remember="Remember"></dark-mode-toggle>
+      <code>&lt;dark-mode-toggle appearance="slider" permanent remember="Remember"&gt;&lt;/dark-mode-toggle&gt;</code>
+      <dark-mode-toggle appearance=slider permanent remember="Remember"></dark-mode-toggle>
     </aside>
     <script>
       window.addEventListener('colorschemechange', (e) => {
