--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="dark.css" media="(prefers-color-scheme: dark)">
     <link rel="stylesheet" href="light.css" media="(prefers-color-scheme: light)">
     <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="slider.css">
     <script type="module" src="dark-mode-toggle-playground.mjs"></script>
     <script type="module" src="../src/dark-mode-toggle.mjs"></script>
   </head>
@@ -88,6 +89,15 @@
     </aside>
     <aside>
       <dark-mode-toggle id="dark-mode-toggle-4" legend="Theme Switcher" light="Light" dark="Dark" remember="Remember this" appearance="switch"></dark-mode-toggle>
+    </aside>
+    <aside>
+      <p>
+        You can also style the toggle into slider appearance like below, checkout <code>slider.css</code> file.
+      </p>
+      <p>
+        Unfortunately this slider toggle will not work with custom css properties such as <code>--dark-mode-toggle-icon-size</code> etc. properly. You must replace these values manually in slider.css due to pseudo element cannot inherit the values defined.
+      </p>
+      <dark-mode-toggle id="dark-mode-toggle-5" class="slider" legend="Dark Slider" remember="Remember this" appearance="toggle"></dark-mode-toggle>
     </aside>
   </body>
 </html>
