Fix minor demo issue

--- a/demo/index.html
+++ b/demo/index.html
@@ -95,7 +95,7 @@
         You can also style the toggle into slider appearance like below, checkout <code>slider.css</code> file.
       </p>
       <p>
-        Unfortunately this slider toggle will not work with custom css properties such as <code>--dark-mode-toggle-icon-size</code> etc. properly. You must replace these values manually in slider.css due to pseudo element cannot inherit the values defined.
+        Unfortunately this slider toggle will not work with custom css properties such as <code>--dark-mode-toggle-icon-size</code> etc. properly. You must replace these values manually in <code>slider.css</code> due to pseudo element cannot inherit the values defined.
       </p>
       <dark-mode-toggle id="dark-mode-toggle-5" class="slider" legend="Dark Slider" remember="Remember this" appearance="toggle"></dark-mode-toggle>
     </aside>
