--- a/demo/unstyled.html
+++ b/demo/unstyled.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script type="module" src="../src/dark-mode-toggle.mjs"></script>
     <style>
       body {
@@ -19,12 +19,25 @@
     <aside>
       <code>&lt;dark-mode-toggle&gt;&lt;/dark-mode-toggle&gt;</code>
       <dark-mode-toggle></dark-mode-toggle>
-      <code>&lt;dark-mode-toggle appearance="switch"&gt;&lt;/dark-mode-toggle&gt;</code>
+      <code
+        >&lt;dark-mode-toggle
+        appearance="switch"&gt;&lt;/dark-mode-toggle&gt;</code
+      >
       <dark-mode-toggle appearance="switch"></dark-mode-toggle>
-      <code>&lt;dark-mode-toggle permanent remember="Remember"&gt;&lt;/dark-mode-toggle&gt;</code>
+      <code
+        >&lt;dark-mode-toggle permanent
+        remember="Remember"&gt;&lt;/dark-mode-toggle&gt;</code
+      >
       <dark-mode-toggle permanent remember="Remember"></dark-mode-toggle>
-      <code>&lt;dark-mode-toggle appearance="switch" permanent remember="Remember"&gt;&lt;/dark-mode-toggle&gt;</code>
-      <dark-mode-toggle appearance=switch permanent remember="Remember"></dark-mode-toggle>
+      <code
+        >&lt;dark-mode-toggle appearance="switch" permanent
+        remember="Remember"&gt;&lt;/dark-mode-toggle&gt;</code
+      >
+      <dark-mode-toggle
+        appearance="switch"
+        permanent
+        remember="Remember"
+      ></dark-mode-toggle>
     </aside>
     <script>
       window.addEventListener('colorschemechange', (e) => {
