Add a stylesheet loader script to fix flashing (issue #77)

--- a/demo/index.html
+++ b/demo/index.html
@@ -92,6 +92,10 @@
         <a href="dist.html">built variant</a> that uses the minified version of
         the script in the <code>dist</code> folder.
       </p>
+      <p>
+        See <a href="with-flashing.html">the flashing issue</a> and the fix
+        (<a href="https://github.com/GoogleChromeLabs/dark-mode-toggle/issues/77">#77</a>).
+      </p>
     </main>
     <aside>
       <dark-mode-toggle id="dark-mode-toggle-1"></dark-mode-toggle>
