Implement three-way appearance

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>Hello Dark Mode</title>
@@ -150,6 +150,16 @@
         legend="Dark Slider"
         remember="Remember this"
         appearance="toggle"
+      ></dark-mode-toggle>
+    </aside>
+    <aside>
+      <dark-mode-toggle
+        id="dark-mode-toggle-6"
+        legend="3-way Theme Switcher"
+        light="Light"
+        system="System"
+        dark="Dark"
+        appearance="three-way"
       ></dark-mode-toggle>
     </aside>
   </body>
