--- a/demo/unstyled.html
+++ b/demo/unstyled.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -38,6 +38,11 @@
         permanent
         remember="Remember"
       ></dark-mode-toggle>
+      <code
+        >&lt;dark-mode-toggle
+        appearance="three-way"&gt;&lt;/dark-mode-toggle&gt;</code
+      >
+      <dark-mode-toggle appearance="three-way"></dark-mode-toggle>
     </aside>
     <script>
       window.addEventListener('colorschemechange', (e) => {
