--- a/demo/without-flashing.html
+++ b/demo/without-flashing.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <noscript id="dark-mode-toggle-stylesheets">
@@ -12,21 +12,20 @@
         href="dark.css"
         media="(prefers-color-scheme: dark)"
       />
+      <meta name="color-scheme" content="dark light" />
     </noscript>
     <script src="../src/dark-mode-toggle-stylesheets-loader.js"></script>
   </head>
   <body>
     <h1>Demo without flashing</h1>
-
-    <div>Refresh to test: <a href="without-flashing.html">Refresh</a></div>
-
-    <div>Go to the version <a href="with-flashing.html">with flashing</a></div>
-
+    <div>Refresh to test:
+      <a href="without-flashing.html">Refresh</a></div>
+    <div>Go to the version
+      <a href="with-flashing.html">with flashing</a></div>
     <div>
       Switch theme:
       <dark-mode-toggle permanent></dark-mode-toggle>
     </div>
-
     <script type="module" src="../src/dark-mode-toggle.mjs"></script>
     <script>
       // Load uncached script to simulate a slow loading.
