--- a/demo/without-flashing.html
+++ b/demo/without-flashing.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <noscript id="dark-mode-toggle-stylesheets">
@@ -18,10 +18,8 @@
   </head>
   <body>
     <h1>Demo without flashing</h1>
-    <div>Refresh to test:
-      <a href="without-flashing.html">Refresh</a></div>
-    <div>Go to the version
-      <a href="with-flashing.html">with flashing</a></div>
+    <div>Refresh to test: <a href="without-flashing.html">Refresh</a></div>
+    <div>Go to the version <a href="with-flashing.html">with flashing</a></div>
     <div>
       Switch theme:
       <dark-mode-toggle permanent></dark-mode-toggle>
