Add demo for internal stylesheets and update README

--- a/demo/index.html
+++ b/demo/index.html
@@ -106,6 +106,10 @@
           >example without flashing</a
         >).
       </p>
+      <p>
+        You can also check out the
+        <a href="internal-stylesheets.html">demo with internal stylesheets</a>.
+      </p>
     </main>
     <aside>
       <dark-mode-toggle id="dark-mode-toggle-1"></dark-mode-toggle>
